--- a/.github/workflows/docs-pages-badge.yml
+++ b/.github/workflows/docs-pages-badge.yml
@@ -2,12 +2,11 @@ name: Docs total pages badge (gist)
 
 on:
   push:
-    branches: ["current"]
+    branches: ["test-badge"]        # change to "current" for prod
     paths:
       - "website/**"
       - "**/*.md"
-  schedule:
-    - cron: "0 6 * * *"   # optional: daily refresh
+      - "**/*.mdx"
   workflow_dispatch:
 
 jobs:
@@ -20,16 +19,20 @@ jobs:
         run: |
           command -v jq >/dev/null || { sudo apt-get update && sudo apt-get install -y jq; }
 
-      - name: Count .md in website/docs + website/snippets
+      - name: Count .md + .mdx in website/docs + website/snippets
         id: count
         shell: bash
         run: |
-          count() { [[ -d "$1" ]] && find "$1" -type f -iname "*.md" \
-            -not -path "*/_partials/*" -not -path "*/_includes/*" -not -path "*/_components/*" \
-            | wc -l | tr -d ' ' || echo 0; }
+          set -euo pipefail
+          count() {
+            [[ -d "$1" ]] && find "$1" -type f \( -iname "*.md" -o -iname "*.mdx" \) \
+            | wc -l | tr -d ' ' || echo 0
+          }
           DOCS=$(count website/docs)
           SNIPS=$(count website/snippets)
-          echo "total=$((DOCS + SNIPS))" >> "$GITHUB_OUTPUT"
+          TOTAL=$((DOCS + SNIPS))
+          echo "Docs: $DOCS"; echo "Snippets: $SNIPS"; echo "TOTAL: $TOTAL"
+          echo "total=${TOTAL}" >> "$GITHUB_OUTPUT"
 
       - name: Update badge JSON in Gist
         uses: schneegans/dynamic-badges-action@v1.7.0
@@ -41,3 +44,5 @@ jobs:
           message: ${{ steps.count.outputs.total }}
           color: informational
           cacheSeconds: 3600
+
+          
