--- a/.github/workflows/docs-pages-badge.yml
+++ b/.github/workflows/docs-pages-badge.yml
@@ -26,15 +26,51 @@ jobs:
         shell: bash
         run: |
           set -euo pipefail
+          # Debug: Check if directories exist
+          echo "Checking directories..."
+          ls -la website/ || echo "website/ directory not found"
+          [ -d "website/docs" ] && echo "website/docs exists" || echo "website/docs does NOT exist"
+          [ -d "website/snippets" ] && echo "website/snippets exists" || echo "website/snippets does NOT exist"
+          
+          # Count function with better error handling
           count() {
-            [[ -d "$1" ]] && find "$1" -type f \( -iname "*.md" -o -iname "*.mdx" \) \
-            | wc -l | tr -d ' ' || echo 0
+            if [ ! -d "$1" ]; then
+              echo "Warning: Directory $1 does not exist" >&2
+              echo 0
+              return
+            fi
+            local result
+            result=$(find "$1" -type f \( -iname "*.md" -o -iname "*.mdx" \) 2>/dev/null | wc -l | tr -d ' \n')
+            echo "${result:-0}"
           }
+          
           DOCS=$(count website/docs)
           SNIPS=$(count website/snippets)
           TOTAL=$((DOCS + SNIPS))
-          echo "Docs: $DOCS"; echo "Snippets: $SNIPS"; echo "TOTAL: $TOTAL"
+          echo "Docs: $DOCS"
+          echo "Snippets: $SNIPS"
+          echo "TOTAL: $TOTAL"
+          
+          # Verify total is a valid number
+          if ! [[ "$TOTAL" =~ ^[0-9]+$ ]]; then
+            echo "Error: Total is not a valid number: $TOTAL"
+            exit 1
+          fi
+          
+          if [ "$TOTAL" -eq 0 ]; then
+            echo "Warning: Total count is 0. This might indicate a problem."
+          fi
+          
           echo "total=${TOTAL}" >> "$GITHUB_OUTPUT"
+          echo "Set output total=${TOTAL}"
+
+      - name: Verify count output
+        run: |
+          echo "Count output value: ${{ steps.count.outputs.total }}"
+          if [ -z "${{ steps.count.outputs.total }}" ]; then
+            echo "Error: Count output is empty!"
+            exit 1
+          fi
 
       - name: Update badge JSON in Gist
         uses: schneegans/dynamic-badges-action@v1.7.0
