--- a/website/blog/ctas.yml
+++ b/website/blog/ctas.yml
@@ -56,7 +56,7 @@
   subheader: Experience the dbt Fusion engine with Tristan Handy and Elias DeFaria on October 28th
   button_text: Save your seat
   url: https://www.getdbt.com/resources/webinars/speed-simplicity-cost-savings-experience-the-dbt-fusion-engine
-- name: sl_mcp
+- name: ai_sl_mcp
   header: Live virtual event 
   subheader: Join our virtual event on Dec 16 & 17: Delivering reliable AI with the dbt Semantic Layer and dbt MCP Server
   button_text: Save your seat
