--- a/website/vercel.json
+++ b/website/vercel.json
@@ -39,6 +39,11 @@
   ],
   "redirects": [
     {
+      "source": "/docs/cloud/cost-management",
+      "destination": "/docs/cloud/about-cloud/dbt-cloud-features",
+      "permanent": true
+    },
+    {
       "source": "/docs/cloud/dbt-cloud-ide/develop-in-the-cloud",
       "destination": "/docs/cloud/studio-ide/develop-in-studio",
       "permanent": true
